# CutFinder

./: .dev-pids  .env.example  .gitignore  Brewfile  CLAUDE.md  LICENSE  Makefile  README-zh.md  README.md  mise.toml  test.md
backend/: pyproject.toml
backend/cutfinder/: __init__.py  config.py  logbuffer.py
backend/cutfinder/adapters/: _jsonparse.py  _progress.py  broll_inspector.py  demucs_separator.py  ffmpeg_media.py  ffmpeg_probe.py  fs_library.py  mlx_whisper.py  omlx_agent.py  omlx_asr.py  omlx_check.py  omlx_text.py  omlx_vision.py  pillow_image.py  qwen_transcriber.py  silero_vad.py  sqlite_cutplan.py  sqlite_footage.py  sqlite_repo.py
backend/cutfinder/api/: app.py  cut_routes.py  library_routes.py  routes.py  schemas.py  settings_routes.py
backend/cutfinder/cutplan/: __init__.py  director.py  format.py  prompts.py  request_parse.py
backend/cutfinder/domain/: __init__.py  enums.py  models.py
backend/cutfinder/pipeline/: cutplan_service.py  orchestrator.py  scanner.py  subtitle_exporter.py  worker.py
backend/cutfinder/ports/: __init__.py  ai.py  cutplan.py  library.py  media.py  probe.py  repository.py  speech.py
backend/cutfinder/subtitle/: __init__.py  format.py
backend/tests/fakes/: __init__.py  fake_library.py  fake_media.py  fake_probe.py  fake_repository.py  fake_separator.py  fake_speech.py  fake_summarizer.py  fake_transcriber.py  omlx_vision.py
backend/tests/integration/: test_integration_demucs.py  test_integration_ffmpeg_media.py  test_integration_metadata_probe.py  test_integration_mlx_whisper.py  test_integration_omlx_summarizer.py  test_integration_omlx_vision.py  test_integration_silero_vad.py
backend/tests/unit/: test_api.py  test_app_factory.py  test_check_omlx_cli.py  test_config.py  test_cut_routes.py  test_cutplan_director.py  test_cutplan_footage.py  test_cutplan_format.py  test_cutplan_request_parse.py  test_cutplan_service.py  test_cutplan_store.py  test_ffmpeg_media.py  test_ffmpeg_probe.py  test_fs_library.py  test_jsonparse.py  test_mlx_whisper.py  test_model_unload.py  test_omlx_asr_align.py  test_omlx_check.py  test_omlx_summarizer.py  test_omlx_vision.py  test_orchestrator.py  test_orchestrator_photo.py  test_orchestrator_reconcile.py  test_pillow_image.py  test_placeholder.py  test_progress.py  test_qwen_transcriber.py  test_scanner.py  test_silero_vad.py  test_sqlite_repo.py  test_subtitle_exporter.py  test_subtitle_format.py  test_subtitle_routes.py  test_worker.py  test_worker_cutplan.py  test_worker_subtitle.py
doc/: detailed-design.md  proposal.md  test-checklist.md  ui-design.md
doc/superpowers-reports/: task-1-report.md
doc/tasks/: 00-scaffold.md  01-config.md  02-metadata-probe.md  03-media.md  04-speech-detector.md  05-transcriber.md  06-summarizer.md  07-vision-tagger.md  08-library-writer.md  09-catalog-repository.md  10-scanner.md  11-orchestrator.md  12-worker-queue.md  13-api.md  14-frontend.md  15-env-deploy.md  16-keyframes.md  17-subtitle-export.md  18-vocal-separation.md  19-subtitle-progress.md  20-native-app.md  21-keyframe-toggle.md  22-library-sync-delete.md  23-photo-analysis.md  24-progress-resume.md  (+7 more)
docs/: detailed-design.md  proposal.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
packaging/: Info.plist.template  launcher.sh
scripts/: build-app.sh  check_omlx.py  dev.sh  download_demucs.py  download_whisper.py
(+80 files in other folders)
