[project]
name = "cutfinder"
version = "0.1.0"
description = "Local offline Vlog footage cataloging and classification tool."
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    # .env parsing for layered config resolution (config.py:resolve_env)
    "python-dotenv",
    # OpenAI-compatible client for OMLX (text + vision)
    "openai",
    # Speech transcription — local mlx-whisper (separate from OMLX)
    "mlx-whisper",
    # Speech detection — Silero VAD (ONNX path, see adapters/silero_vad.py)
    "torch>=2.0",
    "silero-vad",
    "onnxruntime",
    # HTTP client for SSE streaming (uvicorn handles server-side; httpx used in tests)
    "httpx",
]

# Development tooling — installed by default on `uv sync` (PEP 735 group).
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    # Type checking and linting
    "mypy>=1.8",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cutfinder"]

# ── test config (kept here so `uv run pytest` works without extra files) ─────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
addopts = "--strict-markers -q"

# Mark for integration tests (need real ffmpeg / OMLX)
markers = [
    "integration: marks test as requiring external dependencies (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Third-party packages without type stubs / py.typed markers.
[[tool.mypy.overrides]]
module = ["silero_vad.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py312"
